<resources>
    <string name="app_name">Bug_Venture_App</string>
    <string name="main_page">This is the main page</string>
    <string name="button1">Go to the login page</string>
    <string name="login">This is the login page</string>
    <string name="email">E - Mail</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up">This is the sign up page</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="go_to_login">Go to login</string>
    <string name="logout">LOG OUT</string>
    <string name="game_start">Let\'s start the game</string>
    <string name="play_button">Play</string>
    <string name="debug_ques">The debug question will be displayed here</string>
    <string name="option_1">OPTION 1</string>
    <string name="option_2">OPTION 2</string>
    <string name="option_3">OPTION 3</string>
    <string name="option_4">OPTION 4</string>
    <string name="next_button">Next</string>
    <string name="situation_ques">The situational question will be displayed here.</string>
    <string name="time_up">The time is up!</string>
    <string name="bug_image">This is the bug image.</string>
    <string name="bug_venture">The written bug venture.</string>
    <string name="mfc_l">The MFC String</string>
    <string name="situation_string_">WHAT WOULD YOU DO?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="debugcodeheading">DEBUG THE CODE.</string>

</resources>
