<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="276dp"
        android:layout_height="97dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="60dp"
        android:text="@string/debug_ques"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="266dp"
        android:layout_height="300dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="73dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:onClick="on_click"
            android:text="@string/option_1"
            style="@style/radio_button_style"/>

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:onClick="on_click"
            android:text="@string/option_2"
            style="@style/radio_button_style"/>

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:onClick="on_click"
            android:text="@string/option_3"
            style="@style/radio_button_style"/>

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:onClick="on_click"
            android:text="@string/option_4"
            style="@style/radio_button_style"/>
    </RadioGroup>

    <Button
        android:id="@+id/button6"
        style="@style/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:background="@drawable/next_button"
        android:text="@string/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/time_deb"
        android:layout_width="79dp"
        android:layout_height="31dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="256dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>